--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
+    "chalk": "^5.4.0",
     "exif-parser": "^0.1.12",
     "fs-extra": "^11.2.0",
     "minimatch": "^9.0.0",
